samples/memleak/out.txt
samples/memleak/bad.c:8:5: error: Memory leak: a [memleak]
    return result;
    ^
